# mist.ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE.md  CONTRIBUTING.md  E2E_TEST_GUIDE.md  FLUTTER_MIGRATION_PLAN.md  INTEGRATION_STATUS.md  KNOWN_ISSUES.md  LICENSE  NEO4J_QUERIES.md  NOTICE  QUICKSTART_GIT_HOOKS.md  QUICKSTART_KNOWLEDGE_INTEGRATION.md  README.md  REPOSITORY_STRUCTURE.md  TESTING.md  TESTING_PROGRESS.md  docker-compose.override.yml  docker-compose.yml  export_graph.py  initialize_schema.py  pyproject.toml  regenerate_graph.py  requirements.txt  run_interruptible_voice.py  test_conversation_handler.py  test_entity_extraction.py  test_extraction_comprehensive.py  test_extraction_workflow.py  test_graph_storage.py  test_neo4j_connection.py  test_streaming_simple.py  test_vector_search.py  wipe_neo4j.py
.github/workflows/: flutter-quality.yml  python-quality.yml
backend/: README.md  audio_protocol.py  config.py  debug_jsonl_logger.py  errors.py  factories.py  interfaces.py  knowledge_config.py  log_handler.py  request_context.py  requirements.txt  sentence_detector.py  server.py  voice_processor.py
backend/chat/: __init__.py  context_budget.py  conversation_handler.py  knowledge_integration.py  mist_context.py  slop_detector.py
backend/event_store/: __init__.py  audio_archive.py  models.py  schema.sql  store.py
backend/knowledge/: __init__.py  admin.py  adr-009-query-audit-2026-04-17.md  config.py  models.py  routing.py
backend/knowledge/curation/: __init__.py  centrality.py  community.py  confidence.py  confidence_decay.py  conflict_resolver.py  deduplication.py  embedding_maintenance.py  graph_writer.py  health.py  orphan_detector.py  pipeline.py  scheduler.py  self_reflection.py  skill_derivation.py  staleness.py
backend/knowledge/embeddings/: __init__.py  embedding_generator.py
backend/knowledge/extraction/: __init__.py  confidence.py  entity_extractor.py  internal_derivation.py  internal_prompts.py  normalizer.py  ontology_extractor.py  pipeline.py  preprocessor.py  prompts.py  property_enricher.py  scope_classifier.py  signal_detector.py  temporal.py  tool_classifier.py  tool_usage_tracker.py  validator.py
backend/knowledge/ingestion/: __init__.py  chunker.py  pipeline.py
backend/knowledge/ontologies/: __init__.py  base.py  v1_0_0.py
backend/knowledge/regeneration/: __init__.py  graph_regenerator.py
backend/knowledge/retrieval/: __init__.py  knowledge_retriever.py  query_classifier.py
backend/knowledge/scripts/: README.md  seed_from_docs.py  wipe_database.py
backend/knowledge/storage/: __init__.py  graph_executor.py  graph_store.py  neo4j_connection.py  (+1 more)
backend/llm/: __init__.py  instrumented_provider.py  llama_server_provider.py  models.py  ollama_provider.py  provider.py
backend/vault/: __init__.py  filewatcher.py  models.py  sidecar_index.py  writer.py
backend/voice_models/: __init__.py  model_manager.py
cli_client/: voice_client.py
config/: models.yaml  system_prompt.txt
data/ingest/: v7-tool-heavy-inputs.jsonl  v8-edge-production-inputs.jsonl
data/voice_training/: README.md  metadata_template.json  training_goals.yaml
dependencies/csm/: .gitignore  MODIFICATIONS.md  README.md  config.py  curate_jarvis.py  generator.py  llm_interface.py  loadandmergecheckpoint.py  lora.py  main.py  models.py  prepare_elise_dataset.py  rag_system.py  requirements.txt  run_csm.py  setup.py  test.py  test_voice.py  vad.py
docker/backend/: Dockerfile
docker/ollama/: init-models.sh
docs/: AI_SLOP_CHECKER.md  GIT_WORKFLOWS.md
docs/specs/: 2026-03-22-phase2b-conversation-migration.md
frontend/: README.md  REDUX_IMPLEMENTATION.md  SETUP.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
mist_desktop/: PHASE_2A_COMPLETE.md  README.md  analysis_options.yaml  pubspec.yaml
mist_desktop/lib/: main.dart
mist_desktop/linux/: CMakeLists.txt
mist_desktop/test/: widget_test.dart
mist_desktop/web/: index.html  manifest.json
mist_desktop/windows/: CMakeLists.txt
models/: .gitkeep
scripts/: README.md  check_ai_slop.py  export_graph.py  ingest_documents.py  install-git-hooks.bat  install-git-hooks.sh  mist_admin.py  regenerate_graph.py  seed_data.yaml  start_dev.py  test_chatterbox.py  test_chatterbox_trials.py  v2_ingest.py
scripts/eval_harness/: .gitignore  README.md  __init__.py  client.py  exoneration_verdict.py  models.yaml  phase3_orchestrator.sh  report.py  run.py  score_v7_probe_run.py  score_v8_probe_run.py  scorers.py  v7_probe_set_design.md  v8_probe_set_design.md
src/core/: knowledge_graph.py
src/multimodal/: README.md  stt.py  text_preprocessing.py  tts.py  voice_interface.py  voice_interface_interrupt.py  voice_interface_streaming.py  voice_profile.py
src/utils/: cleanup.py
tests/: conftest.py
tests/integration/: conftest.py  test_cluster_3_reproducers.py  test_cluster_4_reproducers.py  test_cluster_5_reproducers.py  test_cluster_6_reproducers.py  test_extraction_pipeline.py
tests/mocks/: __init__.py  config.py  embeddings.py  neo4j.py  ollama.py
tests/unit/: conftest.py  test_admin_chat_replay.py  test_admin_provenance.py  test_admin_seed.py  test_admin_vault_bootstrap.py  test_admin_vault_cli.py  test_debug_jsonl_logger.py  test_eval_harness_scorers.py  test_factories_vault.py  test_knowledge_streaming.py  test_personality_config.py  test_score_v7_probe_run.py  test_score_v8_probe_run.py  test_sentence_detector.py
voice_profiles/cortana/: personality.yaml
voice_profiles/friday/: personality.yaml
voice_profiles/jarvis/: personality.yaml
(+163 files in other folders)
