[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mist-ai"
version = "0.1.0"
description = "MIST.AI - Transparent cognitive architecture with persistent memory"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["ai", "voice", "knowledge-graph", "neo4j", "local-llm"]
authors = [
    {name = "MIST.AI Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=14.0",
    "neo4j>=5.20",
    "ollama>=0.4",
    "openai>=1.30",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "lancedb>=0.20",
    "pyarrow>=17.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.5",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
voice = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "PyAudio>=0.2.14",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "ruff>=0.8",
    "bandit>=1.8",
    "codespell>=2.3",
    "pre-commit>=4.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | __pycache__
  | dependencies
  | dist
  | build
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle (docstring quality)
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function call in argument defaults (FastAPI uses this)
    "B905",  # zip without explicit strict parameter
    "D100",  # missing docstring in public module (too strict for now)
    "D104",  # missing docstring in public package (too strict for now)
    "D107",  # missing docstring in __init__ (too strict for now)
    "D103",  # missing docstring in public function (acceptable for scripts)
    "D105",  # missing docstring in magic method (standard practice)
    "E402",  # module level import not at top (intentional for some scripts)
    "N806",  # variable naming should be lowercase (intentional constants in functions)
    "F402",  # import shadowed by loop variable (minor issue)
    "E722",  # bare except (will fix manually if needed)
    "D417",  # missing argument descriptions (can be improved incrementally)
    "D205",  # blank line between summary and description (minor style)
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "dependencies",
    "dist",
    "build",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"backend/interfaces.py" = ["D102"]  # Protocol stubs have no method bodies to document
"tests/mocks/*.py" = ["D102"]  # Test fake methods are self-documenting via class docstrings
"tests/**/*.py" = ["D101", "D102"]  # Test classes/methods use descriptive names, not docstrings

[tool.ruff.isort]
known-first-party = ["backend"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
follow_imports = "silent"  # Check imports but don't report their errors
exclude = [
    "^dependencies/",
    "^src/",
    "^tests/",
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "openai.*",
    "httpx.*",
    "neo4j.*",
    "chromadb.*",
    "sentence_transformers.*",
    "plotly.*",
    "rich.*",
    "sounddevice.*",
    "whisper.*",
    "torch.*",
    "torchaudio.*",
    "numpy.*",
    "uvicorn.*",
    "fastapi.*",
    "vad.*",
    "generator.*",
    "nest_asyncio.*",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/dependencies/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "dependencies", ".venv", "venv", "scripts"]
skips = ["B101"]  # Skip assert_used (we use asserts appropriately)

[tool.codespell]
skip = "*.git,*.venv,venv,*.pyc,*.egg-info,*.lock,mist_desktop,dependencies"
ignore-words-list = "crate,nd,te,thre,hass,bloc,lod,deriver"
